--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.4",
@@ -25,6 +26,7 @@
         "symfony/runtime": "5.3.*",
         "symfony/serializer": "5.3.*",
         "symfony/validator": "5.3.*",
+        "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*"
     },
     "require-dev": {
